# newsletter_crew

./: .gitignore  README.md  pyproject.toml
.codegpt/: head
logs/: 2025-01-01_08-14_edit_task.md  2025-01-01_08-14_newsletter.html  2025-01-01_08-14_research_task.md
src/newsletter_crew/: crew.py  main.py
src/newsletter_crew/tools/: cached_search.py  research.py
